line and pie (basic working)

--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,13 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>Garph App</title>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
+    <li><a href="#/line">Line Chart</a></li>
+    <li><a href="#/pie">Pie Chart</a></li>
   </ul>
 
   <div ng-view></div>
